--- a/HTML PAGE NEW.html
+++ b/HTML PAGE NEW.html
@@ -26,14 +26,23 @@
             <li>blanket</li>
         </ol>
         <from action="process.html">
-            <label for="name">what is your favourite movies</label><br>
-            <input type="text" placeholder="enter the movie name" id="name" name="whatisyourfavouritemovie"><br>
+            <label for="name">what is your favourite movies ?</label><br>
             <label for="dislike">what is your least favourite movies</label><br>
             <input type="text" placeholder="enter the movie name" id="dislike" dislike="whatisyourleastfavouritemovie"><br>
             <label for="love">do you love movies?<br>
                 <input type="radio" id="love" name="love"> I love movies </label><br>
             <label for="dontlove">
                 <input type="radio" id="dontlove" name="love">I hate movies</label><br>
+            <label for="moviekind">what is your favourite kind of movies ?</label><br>
+            <input type="checkbox" id="moviekind" name="moviekind">fantasy</label><br> 
+            <input type="checkbox" id="moviekind" name="moviekind">si-fi</label><br> 
+            <input type="checkbox" id="moviekind" name="moviekind">romance</label><br>
+            <input type="checkbox" id="moviekind" name="moviekind">comedy</label><br> 
+            <input type="checkbox" id="moviekind" name="moviekind">horror</label><br>
+            <input type="checkbox" id="moviekind" name="moviekind">history</label><br>   
+            <input type="checkbox" id="moviekind" name="moviekind">crime and mysterious</label><br> 
+            <input type="text" placeholder="enter the movie kind" id="moviekind" moviekind="what kind of movie you like?"><br>
+
             <button typr="submit">SUBMIT</button>
         </from>
     </main>
