--- a/HTML PAGE NEW.html
+++ b/HTML PAGE NEW.html
@@ -10,7 +10,7 @@
      </head>
      <body>
       <!--this is the visible part of my webpage-->
-      <h1> music </h1>
+      <h1> movies  </h1>
       <main>
         <p>click here to view more <a href="#">movie</a></p>
         <a href="#"><img src="movie.jpeg" alt= "a movies pic"></a>
