--- a/HTML PAGE NEW.html
+++ b/HTML PAGE NEW.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width , initial-scale=1.0">
         <meta name="keywords"  content="movie">
         <meta name="author" content="namon's Inc">
-        <link rel="style sheet" href="css for movie.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
      </head>
      <body>
       <!--this is the visible part of my webpage-->
@@ -39,12 +39,12 @@
             <input type="checkbox" id="moviekind" name="moviekind">romance</label><br>
             <input type="checkbox" id="moviekind" name="moviekind">comedy</label><br> 
             <input type="checkbox" id="moviekind" name="moviekind">horror</label><br>
-            <input type="checkbox" id="moviekind" name="moviekind">history</label><br>   
+            <input type="checkbox" id="moviekind" name="moviekind">history</label><br>  
             <input type="checkbox" id="moviekind" name="moviekind">crime and mysterious</label><br> 
+            <i class="material-icons">label</i>
             <input type="text" placeholder="enter the movie kind" id="moviekind" moviekind="what kind of movie you like?"><br>
-
             <button typr="submit">SUBMIT</button>
-        </from>
-    </main>
-  </body>
+         </from>
+     </main>
+   </body>
 </html>        
