--- a/HTML PAGE NEW.html
+++ b/HTML PAGE NEW.html
@@ -17,8 +17,8 @@
         <p>movie you should watch</p>
         <ul>
             <li>interstellar</li>
-            <li>casablanca(1942)</li>
             <li>call me by your name(2017)</li>
+            <li>casablanca(1942)</li
         </ul>
         <p>things you should have when you watch movie</p>
         <ol>
@@ -43,6 +43,11 @@
             <input type="checkbox" id="moviekind" name="moviekind">crime and mysterious</label><br> 
             <i class="material-icons">label</i>
             <input type="text" placeholder="enter the movie kind" id="moviekind" moviekind="what kind of movie you like?"><br>
+            <h3>here is one of my favourite movie theme song</h3>
+            <audio controls autoplay>
+                <source src="moviesong.mp3" type="audio/mpeg">
+            </audio>
+                
             <button typr="submit">SUBMIT</button>
          </from>
      </main>
