--- a/HTML PAGE NEW.html
+++ b/HTML PAGE NEW.html
@@ -48,6 +48,29 @@
                 <source src="moviesong.mp3" type="audio/mpeg">
             </audio>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/TYA-Rm1xJQA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <table>
+                <caption>Most popular movie genres among adults in the United States as of December 2018, by gender</caption>
+                <tr>
+                 <th colspan="2">comedy</th>
+                 <th colspan="2">romance</th>
+                 <th colspan="2">horror</th>
+                <tr>
+                 <th>male</th>
+                 <th>female</th>
+                 <th>male</th>
+                 <th>female</th>
+                 <th>male</th>
+                 <th>female</th>
+                </tr>
+                <tr>
+                 <td>90%</td>
+                 <td>91%</td>
+                 <td>55%</td>
+                 <td>77%</td>
+                 <td>57%</td>
+                 <td>47%</td>
+                </tr>
+               </table>
             <button type="submit">SUBMIT</button>
          </from>
      </main>
