Update HTML PAGE NEW.html

--- a/HTML PAGE NEW.html
+++ b/HTML PAGE NEW.html
@@ -27,6 +27,7 @@
         </ol>
         <from action="process.html">
             <label for="name">what is your favourite movies ?</label><br>
+            <input type="text" placeholder="enter the movie name" id="like" like="whatisyourfavouritemovie"><br>
             <label for="dislike">what is your least favourite movies</label><br>
             <input type="text" placeholder="enter the movie name" id="dislike" dislike="whatisyourleastfavouritemovie"><br>
             <label for="love">do you love movies?<br>
