Update HTML PAGE NEW.html

--- a/HTML PAGE NEW.html
+++ b/HTML PAGE NEW.html
@@ -18,7 +18,7 @@
         <ul>
             <li>interstellar</li>
             <li>call me by your name(2017)</li>
-            <li>casablanca(1942)</li
+            <li>casablanca(1942)</li>
         </ul>
         <p>things you should have when you watch movie</p>
         <ol>
