--- a/HTML PAGE NEW.html
+++ b/HTML PAGE NEW.html
@@ -35,9 +35,9 @@
             <label for="dontlove">
                 <input type="radio" id="dontlove" name="love">I hate movies</label><br>
             <label for="moviekind">what is your favourite kind of movies ?</label><br>
-            <input type="checkbox" id="moviekind" name="moviekind">fantasy</label><br> 
-            <input type="checkbox" id="moviekind" name="moviekind">si-fi</label><br> 
-            <input type="checkbox" id="moviekind" name="moviekind">romance</label><br>
+            <input type="checkbox" id="moviekind" name="moviekind">fantasy<br> 
+            <input type="checkbox" id="moviekind" name="moviekind">si-fi<br> 
+            <input type="checkbox" id="moviekind" name="moviekind">romance<br>
             <input type="checkbox" id="moviekind" name="moviekind">comedy</label><br> 
             <input type="checkbox" id="moviekind" name="moviekind">horror</label><br>
             <input type="checkbox" id="moviekind" name="moviekind">history</label><br>  
