--- a/HTML PAGE NEW.html
+++ b/HTML PAGE NEW.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+
     <head>
         <title>movie</title>
         <meta charset="UTF-8">
@@ -18,16 +18,15 @@
         <ul>
             <li>interstellar</li>
             <li>call me by your name(2017)</li>
-            <li>casablanca(1942)</li>
-          </ul>
+            <li>casablanca(1942)</li
+        </ul>
         <p>things you should have when you watch movie</p>
-        <ul>
+        <ol>
             <li>snack</li>
             <li>blanket</li>
-        </ul>
+        </ol>
         <from action="process.html">
             <label for="name">what is your favourite movies ?</label><br>
-            <input type="text" placeholder="enter the movie name" id="like" like="whatisyourfavouritemovie"><br>
             <label for="dislike">what is your least favourite movies</label><br>
             <input type="text" placeholder="enter the movie name" id="dislike" dislike="whatisyourleastfavouritemovie"><br>
             <label for="love">do you love movies?<br>
@@ -35,9 +34,9 @@
             <label for="dontlove">
                 <input type="radio" id="dontlove" name="love">I hate movies</label><br>
             <label for="moviekind">what is your favourite kind of movies ?</label><br>
-            <input type="checkbox" id="moviekind" name="moviekind">fantasy<br> 
-            <input type="checkbox" id="moviekind" name="moviekind">si-fi<br> 
-            <input type="checkbox" id="moviekind" name="moviekind">romance<br>
+            <input type="checkbox" id="moviekind" name="moviekind">fantasy</label><br> 
+            <input type="checkbox" id="moviekind" name="moviekind">si-fi</label><br> 
+            <input type="checkbox" id="moviekind" name="moviekind">romance</label><br>
             <input type="checkbox" id="moviekind" name="moviekind">comedy</label><br> 
             <input type="checkbox" id="moviekind" name="moviekind">horror</label><br>
             <input type="checkbox" id="moviekind" name="moviekind">history</label><br>  
@@ -76,4 +75,3 @@
          </from>
      </main>
    </body>
-</html>        
