--- a/HTML PAGE NEW.html
+++ b/HTML PAGE NEW.html
@@ -18,14 +18,13 @@
         <ul>
             <li>interstellar</li>
             <li>call me by your name(2017)</li>
-            <li>casablanca(1942)</li
+            <li>casablanca(1942)</li>
         </ul>
         <p>things you should have when you watch movie</p>
         <ol>
             <li>snack</li>
             <li>blanket</li>
         </ol>
-        <from action="process.html">
             <label for="name">what is your favourite movies ?</label><br>
             <label for="dislike">what is your least favourite movies</label><br>
             <input type="text" placeholder="enter the movie name" id="dislike" dislike="whatisyourleastfavouritemovie"><br>
