--- a/HTML PAGE NEW.html
+++ b/HTML PAGE NEW.html
@@ -33,7 +33,7 @@
             <label for="dontlove">
                 <input type="radio" id="dontlove" name="love">I hate movies</label><br>
             <label for="moviekind">what is your favourite kind of movies ?</label><br>
-            <input type="checkbox" id="moviekind" name="moviekind">fantasy</label><br> 
+            <input type="checkbox" id="moviekind" name="moviekind">fantasy<br> 
             <input type="checkbox" id="moviekind" name="moviekind">si-fi</label><br> 
             <input type="checkbox" id="moviekind" name="moviekind">romance</label><br>
             <input type="checkbox" id="moviekind" name="moviekind">comedy</label><br> 
