--- a/HTML PAGE NEW.html
+++ b/HTML PAGE NEW.html
@@ -34,12 +34,12 @@
                 <input type="radio" id="dontlove" name="love">I hate movies</label><br>
             <label for="moviekind">what is your favourite kind of movies ?</label><br>
             <input type="checkbox" id="moviekind" name="moviekind">fantasy<br> 
-            <input type="checkbox" id="moviekind" name="moviekind">si-fi</label><br> 
-            <input type="checkbox" id="moviekind" name="moviekind">romance</label><br>
-            <input type="checkbox" id="moviekind" name="moviekind">comedy</label><br> 
-            <input type="checkbox" id="moviekind" name="moviekind">horror</label><br>
-            <input type="checkbox" id="moviekind" name="moviekind">history</label><br>  
-            <input type="checkbox" id="moviekind" name="moviekind">crime and mysterious</label><br> 
+            <input type="checkbox" id="moviekind" name="moviekinds">si-fi</label><br> 
+            <input type="checkbox" id="moviekind" name="moviekinde">romance</label><br>
+            <input type="checkbox" id="moviekind" name="moviekindw">comedy</label><br> 
+            <input type="checkbox" id="moviekind" name="moviekindq">horror</label><br>
+            <input type="checkbox" id="moviekind" name="moviekinda">history</label><br>  
+            <input type="checkbox" id="moviekind" name="moviekindz">crime and mysterious</label><br> 
             <i class="material-icons">label</i>
             <input type="text" placeholder="enter the movie kind" id="moviekind" moviekind="what kind of movie you like?"><br>
             <h3>here is one of my favourite movie theme song and anime scence</h3>
